--- a/cleanup/Makefile
+++ b/cleanup/Makefile
@@ -19,8 +19,7 @@
 
 
 .PHONY: test
-test: ROOT := $(shell pwd)/..
 test:
-	@PYTHONPATH="$(ROOT)/cleanup/src:$(ROOT)/execute/src:$(ROOT)/git-repo/src:${PYTHONPATH}"\
+	@PYTHONPATH="$(shell pwd)/src/:${PYTHONPATH}"\
 	 PYTHONDONTWRITEBYTECODE=1\
-		python -m unittest --verbose --buffer deso.git.repo.test.allTests
+	  python -m unittest --verbose deso.cleanup.test.allTests
