--- a/execute/Makefile
+++ b/execute/Makefile
@@ -1,7 +1,7 @@
 # Makefile
 
 #/***************************************************************************
-# *   Copyright (C) 2015 Daniel Mueller (deso@posteo.net)                   *
+# *   Copyright (C) 2014-2015 Daniel Mueller (deso@posteo.net)              *
 # *                                                                         *
 # *   This program is free software: you can redistribute it and/or modify  *
 # *   it under the terms of the GNU General Public License as published by  *
@@ -19,8 +19,8 @@
 
 
 .PHONY: test
-test: ROOT := $(shell pwd)/..
+test: ROOT := $(shell pwd)/../
 test:
-	@PYTHONPATH="$(ROOT)/cleanup/src:$(ROOT)/execute/src:$(ROOT)/git-repo/src:${PYTHONPATH}"\
+	@PYTHONPATH="$(ROOT)/cleanup/src/:$(ROOT)/execute/src/:${PYTHONPATH}"\
 	 PYTHONDONTWRITEBYTECODE=1\
-		python -m unittest --verbose --buffer deso.git.repo.test.allTests
+	  python -m unittest --verbose --buffer deso.execute.test.allTests
