--- a/copyright/Makefile
+++ b/copyright/Makefile
@@ -1,7 +1,7 @@
 # Makefile
 
 #/***************************************************************************
-# *   Copyright (C) 2015 Daniel Mueller (deso@posteo.net)                   *
+# *   Copyright (C) 2015-2016 Daniel Mueller (deso@posteo.net)              *
 # *                                                                         *
 # *   This program is free software: you can redistribute it and/or modify  *
 # *   it under the terms of the GNU General Public License as published by  *
@@ -17,9 +17,20 @@
 # *   along with this program.  If not, see <http://www.gnu.org/licenses/>. *
 # ***************************************************************************/
 
+ROOT := $(shell pwd)/..
+PYTHONPATH := "$(ROOT)/copyright/src/:${PYTHONPATH}"
+
 
 .PHONY: test
 test:
-	@PYTHONPATH="$(shell pwd)/src/:${PYTHONPATH}"\
+	@PYTHONPATH="$(PYTHONPATH)"\
 	 PYTHONDONTWRITEBYTECODE=1\
 		python -m unittest --verbose --buffer deso.copyright.test.allTests
+
+
+.PHONY: %
+%:
+	@echo "Running deso.copyright.test.$@ ..."
+	@PYTHONPATH="$(PYTHONPATH)"\
+	 PYTHONDONTWRITEBYTECODE=1\
+		python -m unittest --verbose --buffer deso.copyright.test.$@
